@@ -1,3 +1,13 @@
+2010-07-29 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCerr.c,
+	* src/SDCCerr.h
+	* src/SDCCglue.c (printIvalCharPtr),
+	* src/SDCCicode.c (geniCodeCast): changed E_LITERAL_GENERIC and
+	  E_NONPTR2_GENPTR to warnings
+	* support/regression/tests/bug1115321.c: fixed problem on solaris
+	* support/regression/tests/literalop.c: only test char overflow on SDCC
+
 2010-07-29 Borut Razem <borut.razem AT siol.net>
 
 	* support/regression/tests/literalop.c:
